--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,6 +1,7 @@
 {
   "extends": [
-    "stylelint-config-standard"
+    "stylelint-config-standard",
+    "stylelint-config-prettier"
   ],
   "fix": true,
   "formatter": "verbose",
@@ -8,8 +9,10 @@
     "stylelint-scss"
   ],
   "rules": {
-    "selector-list-comma-newline-after": "always",
-    "selector-type-case": "lower",
+    "indentation": 2,
+    "selector-list-comma-newline-after": "never-multi-line",
+    "rule-empty-line-before": "always",
+    "at-rule-whitelist": ["include", "import", "keyframes", "mixin", "extend"],
     "at-rule-no-unknown": null,
     "scss/at-rule-no-unknown": true,
     "declaration-empty-line-before": "never",
