--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "lint:fix": "node linter --fix --verbose | snazzy",
     "stylelint": "stylelint 'src/**/**.scss' --syntax scss",
     "stylelint:fix": "stylelint 'src/**/**.scss' --syntax scss --fix",
+    "check_circular": "madge --circular src/app/index.js",
     "test": "jest --config jest.conf.json -u"
   },
   "dependencies": {
@@ -88,6 +89,7 @@
     "jest": "^24.1.0",
     "jest-cli": "^24.1.0",
     "jest-enzyme": "^7.0.1",
+    "madge": "^3.4.4",
     "postcss": "^7.0.17",
     "postcss-inline-svg": "^3.0.0",
     "prettier": "^1.18.2",
