--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend-skeleton",
-  "version": "4.0.0-beta",
+  "version": "3.0.0-beta",
   "description": "Yet another boilerplate created at first for using Angular/React in conjunction with Django.",
   "author": "DjangoStars <info@djangostars.com> (https://github.com/django-stars/)",
   "contributors": [
@@ -90,12 +90,13 @@
     "eslint-plugin-react": "^7.7.0",
     "eslint-plugin-standard": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "husky": "^3.0.3",
     "jest": "^24.1.0",
     "jest-cli": "^24.1.0",
     "jest-enzyme": "^7.0.1",
+    "lint-staged": "^9.2.1",
     "madge": "^3.4.4",
     "postcss-inline-svg": "^3.0.0",
-    "prettier": "^1.18.2",
     "react-test-renderer": "^16.8.3",
     "redux-mock-store": "^1.5.1",
     "reload-html-webpack-plugin": "^0.1.2",
@@ -109,5 +110,19 @@
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.2.1",
     "write-file-webpack-plugin": "^4.5.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{jsx,js}": [
+      "yarn run lint",
+      "yarn run check_circular"
+    ],
+    "src/**/*.scss": [
+      "yarn run stylelint"
+    ]
   }
 }
