--- a/package.json
+++ b/package.json
@@ -86,9 +86,11 @@
     "eslint-plugin-react": "^7.7.0",
     "eslint-plugin-standard": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "husky": "^3.0.3",
     "jest": "^24.1.0",
     "jest-cli": "^24.1.0",
     "jest-enzyme": "^7.0.1",
+    "lint-staged": "^9.2.1",
     "madge": "^3.4.4",
     "postcss": "^7.0.17",
     "postcss-inline-svg": "^3.0.0",
@@ -107,5 +109,19 @@
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.2.1",
     "write-file-webpack-plugin": "^4.5.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{jsx,js}": [
+      "yarn run lint",
+      "yarn run check_circular"
+    ],
+    "src/**/*.scss": [
+      "yarn run stylelint"
+    ]
   }
 }
