--- a/package.json
+++ b/package.json
@@ -32,10 +32,11 @@
     "test": "jest --config jest.conf.json -u"
   },
   "dependencies": {
-    "babel-polyfill": "^6.26.0",
-    "@sentry/browser": "^5.6.1",
+    "@babel/polyfill": "^7.4.4",
+    "abortcontroller-polyfill": "^1.3.0",
     "bootstrap": "^4.0.0",
     "core-decorators": "^0.20.0",
+    "core-js": "^3.1.4",
     "lodash": "^4.17.5",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
