--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
+    "@sentry/browser": "^5.6.1",
     "abortcontroller-polyfill": "^1.3.0",
     "bootstrap": "^4.0.0",
     "core-decorators": "^0.20.0",
@@ -48,6 +49,7 @@
     "redux-form": "^7.3.0",
     "redux-observable": "^0.18.0",
     "redux-sentry-middleware": "^0.0.15",
+    "regenerator-runtime": "^0.13.3",
     "reselect": "^3.0.1",
     "rxjs": "^5.5.7",
     "smoothscroll-polyfill": "^0.4.3",
