--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -42,7 +42,7 @@
     }],
     "space-before-function-paren": ["error", { "anonymous": "never", "named": "never", "asyncArrow": "always" }],
     "no-multiple-empty-lines": ["error", { "max": 2, "maxEOF": 0, "maxBOF": 0 }],
-    "no-unused-vars": ["error", {"args": "none"}],
+    "no-unused-vars": ["error", {"args": "none", "varsIgnorePattern": "_"}],
     "object-curly-spacing": ["error", "always"],
     "react/react-in-jsx-scope": "off",
     "react/prop-types": ["off"],
