--- a/package.json
+++ b/package.json
@@ -24,13 +24,17 @@
   "scripts": {
     "start": "NODE_ENV=development webpack-dev-server --progress --colors --mode development",
     "build": "NODE_ENV=production webpack --mode production",
-    "lint": "node linter --verbose | snazzy",
-    "lint:fix": "node linter --fix --verbose | snazzy",
+    "lint": "yarn run eslint && yarn run stylelint",
+    "lint:fix": "yarn run eslint:fix && yarn run stylelint:fix",
+    "eslint": "node linter --verbose | snazzy",
+    "eslint:fix": "node linter --fix --verbose | snazzy",
+    "stylelint": "stylelint 'src/**/**.scss' --syntax scss",
+    "stylelint:fix": "stylelint 'src/**/**.scss' --syntax scss --fix",
     "test": "jest --config jest.conf.json -u"
   },
   "dependencies": {
-    "babel-polyfill": "^6.26.0",
     "@sentry/browser": "^5.6.1",
+    "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.0.0",
     "core-decorators": "^0.20.0",
     "lodash": "^4.17.5",
@@ -92,6 +96,9 @@
     "reload-html-webpack-plugin": "^0.1.2",
     "snazzy": "^8.0.0",
     "standard-engine": "^10.0.0",
+    "stylelint": "^10.1.0",
+    "stylelint-config-standard": "^18.3.0",
+    "stylelint-scss": "^3.9.0",
     "webpack": "^4.29.6",
     "webpack-blocks": "^2.0.0-rc",
     "webpack-cli": "^3.2.3",
