--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "@sentry/browser": "^5.6.1",
+    "axios": "^0.19.0",
     "bootstrap": "^4.0.0",
     "core-decorators": "^0.20.0",
     "djangostars": "https://github.com/django-stars/frontend-skeleton-contrib.git",
