--- a/package.json
+++ b/package.json
@@ -50,8 +50,7 @@
     "redux-sentry-middleware": "^0.0.15",
     "reselect": "^3.0.1",
     "rxjs": "^5.5.7",
-    "smoothscroll-polyfill": "^0.4.3",
-    "whatwg-fetch": "^3.0.0"
+    "smoothscroll-polyfill": "^0.4.3"
   },
   "devDependencies": {
     "@babel/core": "^7.3.3",
