--- a/.env.default
+++ b/.env.default
@@ -44,9 +44,10 @@ STORAGE_KEY=ds
 # what to store, set empty or null to store all state
 CACHE_STATE_KEYS=["resource.session"]
 
-#Sentry configs
+# Sentry configs
 SENTRY_ORG=djangostars
-SENTRY_PROJECT=ds-app
+SENTRY_PROJECT=
 SENTRY_AUTH_TOKEN=
 SENTRY_DSN=
 SENTRY_ENVIRONMENT=dev
+SENTRY_URL=https://sentry.djangostars.com/
