--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "lint:fix": "yarn run eslint:fix && yarn run stylelint:fix",
     "eslint": "node linter --verbose | snazzy",
     "eslint:fix": "node linter --fix --verbose | snazzy",
-    "stylelint": "stylelint 'src/**/**.scss' --syntax scss",
-    "stylelint:fix": "stylelint 'src/**/**.scss' --syntax scss --fix",
+    "stylelint": "stylelint 'src/**/*.scss' --syntax scss",
+    "stylelint:fix": "stylelint 'src/**/*.scss' --syntax scss --fix",
     "test": "jest --config jest.conf.json -u"
   },
   "dependencies": {
@@ -89,9 +89,11 @@
     "eslint-plugin-react": "^7.7.0",
     "eslint-plugin-standard": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "husky": "^3.0.9",
     "jest": "^24.1.0",
     "jest-cli": "^24.1.0",
     "jest-enzyme": "^7.0.1",
+    "lint-staged": "^9.4.3",
     "postcss-inline-svg": "^3.0.0",
     "react-test-renderer": "^16.8.3",
     "redux-mock-store": "^1.5.1",
