--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "test": "jest --config jest.conf.json -u"
   },
   "dependencies": {
-    "@sentry/browser": "^5.6.1",
+    "@sentry/browser": "^5.9.0",
     "abortcontroller-polyfill": "^1.3.0",
     "bootstrap": "^4.0.0",
     "core-decorators": "^0.20.0",
@@ -41,19 +41,18 @@
     "ds-cache": "https://github.com/django-stars/ds-fe-cache",
     "ds-redux-helpers": "https://github.com/django-stars/ds-redux-helpers",
     "ds-resource": "https://github.com/django-stars/ds-frontend-resource",
-    "lodash": "^4.17.5",
+    "lodash": "^4.17.15",
     "path-to-regexp": "^1.7.0",
     "prop-types": "^15.7.2",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-hot-loader": "^4.0.0",
-    "react-redux": "^5.0.7",
-    "react-router": "^5.0.1",
-    "react-router-dom": "^5.0.1",
-    "redux": "^3.7.2",
-    "redux-form": "^7.3.0",
-    "redux-sentry-middleware": "^0.0.15",
-    "reselect": "^3.0.1",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
+    "redux": "^4.0.5",
+    "redux-form": "^8.2.6",
+    "redux-sentry-middleware": "^0.1.3",
+    "reselect": "^4.0.0",
     "smoothscroll-polyfill": "^0.4.3",
     "whatwg-fetch": "^3.0.0"
   },
@@ -72,6 +71,7 @@
     "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
+    "@hot-loader/react-dom": "^16.11.0",
     "@sentry/webpack-plugin": "^1.8.0",
     "autoprefixer": "^9.4.9",
     "babel-eslint": "^10.0.1",
@@ -96,6 +96,7 @@
     "jest-enzyme": "^7.0.1",
     "lint-staged": "^9.4.3",
     "postcss-inline-svg": "^3.0.0",
+    "react-hot-loader": "^4.12.19",
     "react-test-renderer": "^16.8.3",
     "redux-mock-store": "^1.5.1",
     "reload-html-webpack-plugin": "^0.1.2",
