--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -46,8 +46,9 @@
     "no-unused-vars": ["error", {"args": "none"}],
     "object-curly-spacing": ["error", "always"],
     "react/react-in-jsx-scope": "off",
-    "react/prop-types": ["off"],
     "react/jsx-uses-vars": ["error"],
+    "react/prop-types": ["error"],
+    "react/require-default-props": ["error"],
     "react/display-name": ["off", { "ignoreTranspilerName": true }]
   }
 }
